# NoteBuddy

./: .dockerignore  .gitignore  .vercelignore  Dockerfile  README.md  app.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  streamlit_app.py
data/: abcd.html
frontend_code/: package-lock.json  package.json  tailwind.config.ts
frontend_code/app/: globals copy.css  globals.css  page.tsx
frontend_code/app/lib/: store.js
frontend_code/app/notebuddy/: page.tsx
frontend_code/components/: About.tsx  ApiKeyModal.tsx  Creator.tsx  Features.tsx  Footer.tsx  Header.tsx  Hero.tsx  button.js  chatbot.js  editor1.js  notes-editor.js  notesEditor2.js  quill.js
frontend_code/components/ParticleBackground/: Particle.ts  ParticleBackground.tsx  useParticleAnimation.ts
frontend_code/components/editor_component/: Button.tsx  Editor.tsx  MenuBar.tsx  SaveButton.tsx  testing.html
frontend_code/components/editor_component/toolbar/: AlignmentControls.tsx  CodeControls.tsx  FontControls.tsx  HighlightControls.tsx  LayoutControls.tsx  ListControls.tsx  TextControls.tsx  TextFormatControls.tsx
frontend_code/components/editor_component/ui/: button.tsx  popover.tsx
frontend_code/components/hooks/: useEditorExtensions.ts
frontend_code/components/lib/: export.ts  parseEditorContent.ts
frontend_code/lib/: export.ts  languages.ts
saved_notes/: notes_20241221_173924.json
src/: config.py  groq_client.py  html_convertor.py  logger.py  response_generation.py  ui_components.py  youtube_handler.py
streamlit_src/: chat.py  config.py  groq_client.py  note_manager.py  youtube.py
