[project]
name = "smart-notes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "groq==0.13.1",
    "markdown2[all]==2.5.2",
    "markdown==3.7",
    "openai==1.58.1",
    "pandas==2.2.3",
    "pillow==11.0.0",
    "pydub==0.25.1",
    "pyperclip==1.9.0",
    "python-dotenv==1.0.1",
    "requests==2.32.3",
    "youtube-transcript-api==0.6.3",
    "yt-dlp==2024.12.13",
    "fastapi==0.115.6",
    "uvicorn==0.34.0",
    "pydantic==2.10.4",
    "python-multipart==0.0.20",
    "altair==5.5.0",
    "annotated-types==0.7.0",
    "anyio==4.7.0",
    "attrs==24.3.0",
    "blinker==1.9.0",
    "cachetools==5.5.0",
    "certifi==2024.12.14",
    "charset-normalizer==3.4.0",
    "click==8.1.7",
    "colorama==0.4.6",
    "defusedxml==0.7.1",
    "distro==1.9.0",
    "gitdb==4.0.11",
    "gitpython==3.1.43",
    "h11==0.14.0",
    "httpcore==1.0.7",
    "httpx==0.28.1",
    "idna==3.10",
    "jinja2==3.1.4",
    "jiter==0.8.2",
    "jsonschema==4.23.0",
    "jsonschema-specifications==2024.10.1",
    "latex2mathml==3.77.0",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "mdurl==0.1.2",
    "narwhals==1.19.0",
    "numpy==2.2.0",
    "packaging==24.2",
    "protobuf==5.29.2",
    "pyarrow==18.1.0",
    "pydantic-core==2.27.2",
    "pydeck==0.9.1",
    "pygments==2.18.0",
    "python-dateutil==2.9.0.post0",
    "pytz==2024.2",
    "pyyaml==6.0.2",
    "referencing==0.35.1",
    "rich==13.9.4",
    "rpds-py==0.22.3",
    "six==1.17.0",
    "smmap==5.0.1",
    "sniffio==1.3.1",
    "starlette==0.41.3",
    "svgwrite==1.4.3",
    "tenacity==9.0.0",
    "toml==0.10.2",
    "tornado==6.4.2",
    "tqdm==4.67.1",
    "typing-extensions==4.12.2",
    "tzdata==2024.2",
    "urllib3==2.2.3",
    "watchdog==6.0.0",
    "wavedrom==2.0.3.post3",
]
